2018-05-21  Aditya Keerthi  <akeerthi@apple.com>

        Added test to verify behaviour when tapping multiple times on an editable node.
        https://bugs.webkit.org/show_bug.cgi?id=185777

        Reviewed by Tim Horton.

        * fast/events/ios/click-event-while-editing-node-expected.txt: Added.
        * fast/events/ios/click-event-while-editing-node.html: Added.

2018-05-21  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r232030.
        https://bugs.webkit.org/show_bug.cgi?id=185850

        "Caused
        TestWebKitAPI.IndexedDB.StructuredCloneBackwardCompatibility
        API test to fail" (Requested by cdumez on #webkit).

        Reverted changeset:

        "File's structured serialization should serialize lastModified
        attribute"
        https://bugs.webkit.org/show_bug.cgi?id=185773
        https://trac.webkit.org/changeset/232030

2018-05-11  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION: performance-api/performance-observer-entry-sort.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=185385

        Reviewed by Saam Barati.

        Add diagnostic assertions to test the hypothesis that performance.now is drifting backwards.

        * performance-api/performance-observer-entry-sort.html:

2018-05-21  Daniel Bates  <dabates@apple.com>

        REGRESSION (r231107): CSP report-only policies are ignored for beacon, importScripts, fetch(), EventSource, and XHR
        https://bugs.webkit.org/show_bug.cgi?id=185789
        <rdar://problem/40380175>

        Reviewed by Andy Estes.

        Add some new tests and updated the expected results of other tests.

        The tests connect-src-beacon-{allowed, blocked} are derived from the Blink test:
        <https://chromium.googlesource.com/chromium/src/+/5c265c1a56a60533a1957589d33eabc201e2e8b6/third_party/WebKit/LayoutTests/http/tests/security/contentSecurityPolicy/connect-src-beacon-allowed.html>
