@@ -19,9 +19,9 @@ var jwkKey = {
     ext: false,
     key_ops: ["deriveKey", "deriveBits"],
     crv: "P-384",
-    x: "1bHwFrsaPRjYq-zFOyLXK8Ugv3EqbVF075ct7ouTl_pwyhjeBu03JHjKTsyVbNWK",
-    y: "1bHwFrsaPRjYq-zFOyLXK8Ugv3EqbVF075ct7ouTl_pwyhjeBu03JHjKTsyVbNWK",
-    d: "ZV5MWMNl0j2wYmTS0bccCCWdp29-WH3u5-cenSSuv-aHX-GkaPFP4sYSvsrfOlLE",
+    x: "NZVgC4P8tS2ztYEDn_heNZ9h40u_VMfDNOBdoFa7kRSxtxNy6QCQmouM0jXydUHf",
+    y: "M5xgBJWr-xs6RXqPjaA4D79joAncTd70eY_B1jcyqJLbwKN6sjE8LI-tJWROBbFE",
+    d: "Jad31DRGPygbSd8rviV06ykvHNw3n-HzAnZUfXLWRIMlv7VKwNzNHFbfmTQPo3mK",
 };
 var nonExtractable = false;
 
